[tool.poetry]
name = "mlflow-sandbox"
version = "0.1.0"
description = ""
authors = ["Avinash Pancham <avinashpancham@outlook.com>"]

[tool.poetry.dependencies]
python = "3.7"
pandas = "^1.0.5"
mlflow = "^1.9.1"
spacy = "^2.3.0"
tqdm = "^4.46.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.0/en_core_web_sm-2.3.0.tar.gz"}
html2text = "^2020.1.16"
psycopg2-binary = "^2.8.5"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
pre-commit = "^2.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
